--- a/public/swagger-ui.html
+++ b/public/swagger-ui.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Watch Tower API Documentation</title>
+    <title>Watch Tower API - Swagger UI</title>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist@5.10.3/swagger-ui.css" />
     <style>
         html {
@@ -15,22 +15,8 @@
             box-sizing: inherit;
         }
         body {
-            margin:0;
+            margin: 0;
             background: #fafafa;
-        }
-        .swagger-ui .topbar {
-            background-color: #1f2937;
-            padding: 10px 0;
-        }
-        .swagger-ui .topbar .download-url-wrapper {
-            display: none;
-        }
-        .swagger-ui .info {
-            margin: 50px 0;
-        }
-        .swagger-ui .info .title {
-            color: #1f2937;
-            font-size: 36px;
         }
     </style>
 </head>
@@ -53,12 +39,7 @@
                 ],
                 layout: "StandaloneLayout",
                 validatorUrl: null,
-                tryItOutEnabled: true,
-                supportedSubmitMethods: ['get'],
-                docExpansion: 'list',
-                filter: true,
-                showExtensions: true,
-                showCommonExtensions: true
+                tryItOutEnabled: true
             });
         };
     </script>
